website/websites/u64q/code/fasta.5.pypy3.log

Mon, 25 May 2015 10:29:19 GMT

COMMAND LINE:
/usr/bin/pypy3 fasta.pypy3-5.pypy3 25000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "fasta.pypy3-5.pypy3", line 98
    yield from lookup(probabilities, prng)
         ^
SyntaxError: invalid syntax
